more changes and refactoring with typescript generics
